# selfbox

./: .env.example  .gitignore  .impeccable.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
.github/workflows/: release-desktop.yml
apps/desktop/: CHANGELOG.md  index.html  package.json  vite.config.ts
apps/desktop/scripts/: bump-version.mjs  generate-icons.mjs
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: keychain.rs  lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/api/: client.rs  mod.rs  retry.rs  types.rs
apps/desktop/src-tauri/src/sync/: conflicts.rs  engine.rs  manifest.rs  mod.rs  multipart.rs  uploader.rs  watcher.rs  winfs.rs
apps/desktop/src-tauri/tests/: background_loop.rs  conflict.rs  pending_ops.rs  reconcile.rs  rename_detection.rs  selective_sync.rs
apps/docs/: package.json  tsconfig.json
apps/docs/app/: globals.css  layout.tsx
apps/docs/components/: mdx.tsx
apps/docs/lib/: layout.shared.tsx
apps/web/: next.config.ts  package.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  providers.tsx
apps/web/assets/: logo.tsx
apps/web/constants/: app.ts
e2e/: core-flows.spec.ts  desktop-device-flow.spec.ts  desktop-file-sync.spec.ts  transcription-flow.spec.ts  workspace-flows.spec.ts
services/fts/: package.json
services/qmd/: Dockerfile  package.json
(+196 files in other folders)
